[project]
name = "dyutas-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "hyun",email = "ghkdgus29@naver.com"}
]
readme = "README.md"
requires-python = ">=3.11, <4.0"
dependencies = [
    "fastapi[standard] (>=0.121.0,<0.122.0)",
    "langchain (>=1.0.0,<2.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "dependency-injector (>=4.48.2,<5.0.0)",
    "langchain-groq (>=1.0.0,<2.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "pyright (>=1.1.407,<2.0.0)",
    "langchain-openai (>=1.0.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
